# system

./: CMakeLists.txt  type.hpp
.github/workflows/: cmake.yml
cmake/: FindGoogleTest.cmake
includes/: Constants.hpp  Geometry.hpp  Lambdify.hpp  Matrix.hpp  Quaternion.hpp  Shape.hpp  Type.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  color.hpp  constants.hpp  matrix.hpp  quaternion.hpp  shape.hpp  std.hpp  type.hpp
tests/: color.cpp  lambda.cpp  quaternion.cpp  type.cpp  vector.cpp
